# gateway

./: .env.dev  .env.docker.dev  .eslintignore  .eslintrc.js  .gitignore  .gitignore copy  .markdownlint.json  .prettierignore  .prettierrc  .prettierrc.json  .spellcheckerdict.txt  .spellcheckerrc.json  .tool-versions  CLAUDE.md  Dockerfile  ENVIRONMENT.md  LICENSE  Makefile  Makefile.account  Makefile.graph  README.md  bash_functions.sh  dev.Dockerfile  docker-compose-e2e.account-worker.yaml  docker-compose-e2e.account.yaml  docker-compose-e2e.content-publishing-worker.yaml  docker-compose-e2e.content-publishing.yaml  docker-compose-k6.account-api.yaml  docker-compose-k6.account.yaml  docker-compose-k6.content-publishing-api.yaml  docker-compose-k6.content-publishing.yaml  docker-compose-k6.content-watcher.yaml  docker-compose-k6.graph-api.yaml  docker-compose-k6.graph.yaml  docker-compose-local-selective.yaml  docker-compose-published.yaml  docker-compose.dev.yaml  docker-compose.local-frequency.yaml  docker-compose.yaml  env.template  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Docker/: Dockerfile.account  Dockerfile.content-publishing  Dockerfile.content-watcher  Dockerfile.dev  Dockerfile.graph  Dockerfile.mock-webhook-logger  Dockerfile.mock-webhook-server  account-service.overview.md  content-publishing-service.overview.md  content-watcher-service.overview.md  content-watcher.overview.md  graph-service.overview.md
__mocks__/: kubo-rpc-client.ts
rust-webhook-server/: Cargo.toml  loggerServer.js
rust-webhook-server/src/: api.rs  main.rs
(+1544 files in other folders)
