[package]
name = "rust-webhook-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apistos = { version = "0.2", features = ["swagger-ui", "extras", "qs_query", "rapidoc", "redoc"] }
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
validator = "0.13"
